--- a/frontend/public/global.css
+++ b/frontend/public/global.css
@@ -1,63 +1,21 @@
-html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
-}
-
+html,
 body {
-	color: #333;
-	margin: 0;
-	padding: 8px;
-	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  font-size: 1rem;
+  font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
+  color: #374151;
+  line-height: 1.5;
+  background: #222222;
 }
-
-a {
-	color: rgb(0,100,200);
-	text-decoration: none;
+.required{
+	color:#000;
+	background-color:#f6f6d7;
+	border-bottom:1px solid #f6f6d7;
+	border-right:1px solid #f6f6d7
 }
-
-a:hover {
-	text-decoration: underline;
-}
-
-a:visited {
-	color: rgb(0,80,160);
-}
-
-label {
-	display: block;
-}
-
-input, button, select, textarea {
-	font-family: inherit;
-	font-size: inherit;
-	-webkit-padding: 0.4em 0;
-	padding: 0.4em;
-	margin: 0 0 0.5em 0;
-	box-sizing: border-box;
-	border: 1px solid #ccc;
-	border-radius: 2px;
-}
-
-input:disabled {
-	color: #ccc;
-}
-
-button {
-	color: #333;
-	background-color: #f4f4f4;
-	outline: none;
-}
-
-button:disabled {
-	color: #999;
-}
-
-button:not(:disabled):active {
-	background-color: #ddd;
-}
-
-button:focus {
-	border-color: #666;
+#loader{
+	-moz-border-radius:5px;-webkit-border-radius:5px;
+	border-radius:5px;text-align:center;font-weight:700;
+	width:100px;padding:10px;
+	background:#fff6bf;color:#000;border:2px solid #fff6bf;
+	position:fixed;z-index:5000;top:10
 }
