Update Layout Movie

--- a/frontend/public/global.css
+++ b/frontend/public/global.css
@@ -4,7 +4,7 @@ body {
   font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif;
   color: #374151;
   line-height: 1.5;
-  background: #222222;
+  background-color: #222222;
 }
 .required{
 	color:#000;
